[FIX] analytic: force analytic distribution title display nowrap
**Steps to reproduce:**
- Configure `Analytic Accounting` via `Accounting` module's settings;
- Go to `Analytic Plans` through `Accounting / Configuration / Analytic Accounting`:
    - Select any record and change its name for a really long one;
- Go to `Expenses` app:
    - Select any expense in the list;
    - Open the `Analytic Distribution` widget.

___
**Issue:**
Long `Analytic Plans` names are wrapped and may lead to unreadable texts.

___
**Expected:**
A smooth UI should display `Analytic Plans` as when accessed through an invoice line from `Accounting` app.

___
**Cause:**
The `Analytic Distribution` widget style of the invoice view inherits from the list renderer, forcing a `nowrap` style while the expense view of the same widget does not.

___
**Fix:**
Force a `nowrap` style for that specific widget.

___
opw-4357324

closes odoo/odoo#192203

--- a/addons/analytic/static/src/components/analytic_distribution/analytic_distribution.scss
+++ b/addons/analytic/static/src/components/analytic_distribution/analytic_distribution.scss
@@ -43,6 +43,7 @@
     .analytic_distribution_popup {
         width: 400px;
         max-height: 50vh;
+        white-space: nowrap;
         cursor: default;
 
         .o_input {
